# django-states2

./: .gitignore  .travis.yml  CHANGELOG.rst  README.rst  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
django_states/: __init__.py  apps.py  compat.py  conf.py  exceptions.py  fields.py  log.py  machine.py  model_methods.py  models.py  signals.py  urls.py  views.py
django_states/management/commands/: graph_states2.py
django_states/templatetags/: django_states.py
docs/: conf.py
test_proj/: manage.py  settings.py  urls.py
tests/: models.py  statemachine.py  test_machine.py
