[tool.poetry]
name = "django-states3"
license = "BSD"
version = "3.0.1"
description = "State machine for django models"
readme = "README.rst"
url = "https://github.com/ulamlabs/django-states3"
repository = "https://github.com/ulamlabs/django-states3"
authors = ["Ulam Labs <contact@ulam.io>"]
packages  = [
    { include = "django_states" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 1.11",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sphinx = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"